--- a/index.html
+++ b/index.html
@@ -338,10 +338,10 @@
             <div class="info-box">
                 <strong>ℹ️ Thông tin ứng dụng:</strong>
                 <ul style="margin-top: 8px; padding-left: 18px; font-size: 13px;">
-                    <li>Tên: Linhcute</li>
+                    <li>Tên: PubgMobile Hack Free NonJB</li>
                     <li>Phiên bản: 1.0</li>
                     <li>Yêu cầu: iOS 12.0+</li>
-                    <li>Dung lượng: ~15MB</li>
+                    <li>Dung lượng: ~4GB</li>
                     <li>Chứng chỉ: Developer Certificate</li>
                 </ul>
             </div>
@@ -349,7 +349,7 @@
         
         <!-- Footer -->
         <div class="footer">
-            <p>© 2024 Linhcute App</p>
+            <p>© 2025 Made By Linhcute</p>
             <p style="margin-top: 3px; color: #999;">
                 Quy trình cài đặt an toàn - 2 bước
             </p>
